// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.google.finapp;

option java_multiple_files = true;
option java_package = "com.google.finapp";
option java_outer_classname = "DatabaseProto";

enum AccountStatus {
  UNSPECIFIED_ACCOUNT_STATUS = 0;
  ACTIVE = 1;
  FROZEN = 2;
}